feat: setup storyboard

--- a/ToDoAlamofire/Base.lproj/Main.storyboard
+++ b/ToDoAlamofire/Base.lproj/Main.storyboard
@@ -1,24 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3VK-LH-Qc8">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ToDo-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ToDoViewController" customModule="ToDoAlamofire" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wk2-uB-mqq">
+                                <rect key="frame" x="0.0" y="88" width="390" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="109" id="opO-TP-g5I" customClass="ToDoTableViewCell" customModule="ToDoAlamofire" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="109"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="opO-TP-g5I" id="h0R-p0-nd3">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="109"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5qU-zr-HrS">
+                                                    <rect key="frame" x="314.66666666666669" y="0.0" width="75.333333333333314" height="128"/>
+                                                    <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EmX-If-tGp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="314.66666666666669" height="109"/>
+                                                    <string key="text">Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label  </string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5qU-zr-HrS" firstAttribute="top" secondItem="h0R-p0-nd3" secondAttribute="top" id="Dpl-fG-PeA"/>
+                                                <constraint firstAttribute="width" secondItem="5qU-zr-HrS" secondAttribute="width" multiplier="5.175" id="Hw1-NI-MAc"/>
+                                                <constraint firstAttribute="bottom" secondItem="5qU-zr-HrS" secondAttribute="bottom" id="K3n-hF-aFe"/>
+                                                <constraint firstAttribute="bottom" secondItem="EmX-If-tGp" secondAttribute="bottom" id="RtY-Lx-GBw"/>
+                                                <constraint firstAttribute="height" secondItem="5qU-zr-HrS" secondAttribute="height" multiplier="0.851562" id="SaA-B5-tlS"/>
+                                                <constraint firstItem="5qU-zr-HrS" firstAttribute="leading" secondItem="EmX-If-tGp" secondAttribute="trailing" id="gXX-RV-viQ"/>
+                                                <constraint firstItem="EmX-If-tGp" firstAttribute="top" secondItem="h0R-p0-nd3" secondAttribute="top" id="mFK-nh-lyR"/>
+                                                <constraint firstAttribute="trailing" secondItem="5qU-zr-HrS" secondAttribute="trailing" id="pHE-AY-kd7"/>
+                                                <constraint firstItem="EmX-If-tGp" firstAttribute="leading" secondItem="h0R-p0-nd3" secondAttribute="leading" id="wVs-QI-Pom"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Lp0-wr-EE0"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="4qI-n5-pNY"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Wk2-uB-mqq" secondAttribute="trailing" id="K3I-HO-OCe"/>
+                            <constraint firstItem="Wk2-uB-mqq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tfp-2E-lt1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Wk2-uB-mqq" secondAttribute="bottom" id="WTn-W6-RnC"/>
+                            <constraint firstItem="Wk2-uB-mqq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yTf-Ds-UfC"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="ToDo" id="Yke-ku-fyU"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1039.1304347826087" y="107.8125"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4qz-ZL-vHc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3VK-LH-Qc8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ILX-o0-yGJ">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Qxi-Ep-xbp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CDN-EN-hXr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="128.98550724637681" y="107.8125"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
