ref: change heightForRowAt

--- a/ToDoAlamofire/ToDoModule/View/Base.lproj/Main.storyboard
+++ b/ToDoAlamofire/ToDoModule/View/Base.lproj/Main.storyboard
@@ -19,24 +19,24 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wk2-uB-mqq">
                                 <rect key="frame" x="0.0" y="88" width="390" height="722"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="109" id="opO-TP-g5I" customClass="ToDoTableViewCell" customModule="ToDoAlamofire" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="109"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="70" id="opO-TP-g5I" customClass="ToDoTableViewCell" customModule="ToDoAlamofire" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="opO-TP-g5I" id="h0R-p0-nd3">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="109"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EmX-If-tGp">
-                                                    <rect key="frame" x="20" y="11" width="279" height="87"/>
+                                                    <rect key="frame" x="20" y="11" width="279" height="48"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5qU-zr-HrS">
-                                                    <rect key="frame" x="314.66666666666669" y="0.0" width="75.333333333333314" height="109"/>
+                                                    <rect key="frame" x="314.66666666666669" y="0.0" width="75.333333333333314" height="70"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbk-fO-ZJP">
-                                                            <rect key="frame" x="29.333333333333314" y="44" width="17" height="21"/>
+                                                            <rect key="frame" x="29.333333333333314" y="24.666666666666671" width="17" height="21"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
